更新第6周index.html

--- a/week06/job/mydjango/douban/templates/index.html
+++ b/week06/job/mydjango/douban/templates/index.html
@@ -22,7 +22,7 @@
     </form>
 </nav>
 <div class="container">
-    <h3 class="mt-5 mb-3">电影名称：阿甘正传</h3>
+    <h3 class="mt-5 mb-3">豆瓣电影短评</h3>
     <table class="table">
         <thead class="thead-light">
         <tr>
